[MacRTL] Don't mirror reload toolbar icon

This came up in UX review. From Material Guidelines:
"Clocks still turn clockwise for RTL languages. A clock icon or a circular
refresh or progress indicator with an arrow pointing clockwise should not
be mirrored."

Bug: 805921
Change-Id: I1d345727b8656964b0574af9ccdc7d5dc26f8661
Reviewed-on: https://chromium-review.googlesource.com/887301
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532009}
Former-commit-id: 3f8dbc8d1358729387a3a331382d5956d3af68c9