chrome/browser/ui/cocoa/toolbar/reload_button_cocoa.mm
@@ -81,6 +81,10 @@ const int kReloadMenuCommands[]  = {
   [self setAttachedMenu:menu_];
 }
 
+- (BOOL)shouldMirrorInRTL {
+  return NO;
+}
+
 - (void)invalidatePendingReloadTimer {
   [pendingReloadTimer_ invalidate];
   pendingReloadTimer_ = nil;
